      list, since the udeb is in fact used now to provide the library and
      netcfg's dependencies have been fixes. Enable dependency resolution
      for netcfg. Now no more updates should be needed here when libiw
      changes.
    - Temporarily disable nano from all images, as it's linked to slang2 and
      the rest of d-i is not, and library reduction cannot cope with two
      slangs.
  * Kurt Roeckx
    - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
      package list. Closes: #306976
    - Change amd64 kernel from 2.6.8-10 to 2.6.8-11.
    - Do not install nano in the monolithic target.
  * Christian Perrier
    - Add the list of needed characters for Kazakh
    - Add the list of needed characters for Vietnamese
  * Colin Watson
    - Force HOME=$(TEMP) for hfsutils calls throughout powerpc
      hd_media_common target.
    - Ship yaboot with powerpc hd-media images.
    - Add rescue stanzas to yaboot configuration files.
    - Document raised kernel command-line limits in 2.6.9.
    - Remove devfs=mount from yaboot configuration files. It shouldn't be
      needed any more.
    - Don't remove modules.*map from the initrd if we're using real hotplug.
    - Use the kernel-specific discover and isa-pnp-modules include files
      rather than explicitly listing those udebs throughout pkg-lists.
    - Make a note about another possible cause for 'locale charmap' being
      wrong during font generation, since it confused me for days ...
    - Document new-style timezone preseeding, available from base-config
      2.65.
  * Frans Pop
    - Fix logic error in build/util/pkg-list to get rid of incorrect warnings
      about missing lists.
  * Martin Michlmayr
    - Add support for rescue mode to mipsel/cobalt.
    - Rename the default target of {mips,mipsel}/sb1-swarm-bn from
      'installer' to 'install' in compliance with other arches.
    - Add support for rescue mode to {mips,mipsel}/sb1-swarm-bn.
  * Stephen R. Marenka