@@ -70,6 +70,7 @@ DEBIAN_CD_INFO = $(SOME_DEST)/$(EXTRANAME)debian-cd_info.tar.gz
 NETBOOT_DIR = $(SOME_DEST)/$(EXTRANAME)debian-installer
 NETBOOT_TAR = $(SOME_DEST)/$(EXTRANAME)netboot.tar.gz
 MISC = $(foreach name,$(MISCNAME),$(SOME_DEST)/$(EXTRANAME)$(name))
+UDEB_LIST = $(BASE_DEST)udeb.list
 
 # some intersting files in tmp/ we may need
 TEMP_INITRD = $(TEMP)/initrd.gz
